Fix sidebar items alignment

--- a/app/components/Sidebar/Sidebar.scss
+++ b/app/components/Sidebar/Sidebar.scss
@@ -9,6 +9,7 @@
   position: sticky;
   top: 50px;
   margin-right: 10px;
+  align-items: center;
   overflow: hidden !important;
   flex-flow: column wrap;
   height: 90vh;
